kubernetes/fluxcd/apps/base/influxdb/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`influxdb.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: influxdb
          port: 80
    - match: Host(`influxdb.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: influxdb
          port: 80
  tls:
    secretName: certificate-secret
